--- a/main.css
+++ b/main.css
@@ -12,8 +12,11 @@ h1{
 small{
     margin-top: 0px;
 }
+#old{
+    height:4em;
+}
 #goal{
-    width: 30em;
+    width: 800px;
     margin: auto auto;
     margin-top: 1em;
     margin-bottom: 1em;
