--- a/main.css
+++ b/main.css
@@ -8,17 +8,32 @@ body{
 }
 h1{
     margin-bottom: 0px;
+    margin-top:10px;
 }
 small{
     margin-top: 0px;
 }
 #old{
     height:4em;
+    padding: 0em .5em;
+}
+a{
+    color: #2A2ABE;
+}
+table{
+    margin: auto auto;
+    border-radius: .5em;;
+}
+td, th{
+    background-color: #A8A8A8;
+    margin: auto .5em;
 }
 #goal{
+    /*text-align: left;*/
     width: 800px;
     margin: auto auto;
-    margin-top: 1em;
+    padding-top: 0;
+    margin-top: 0em;
     margin-bottom: 1em;
 }
 #game{
