--- a/main.css
+++ b/main.css
@@ -1,40 +1,39 @@
 @import url(http://fonts.googleapis.com/css?family=Bree+Serif);
-*{
+* {
     font-family: "Bree Serif", serif;
 }
-body{
+body {
     background-color: #CACACA;
     text-align: center;
 }
-h1{
+h1 {
     margin-bottom: 0px;
-    margin-top:10px;
+    margin-top: 10px;
 }
-small{
+small {
     margin-top: 0px;
 }
-img.small{
-    height:4em;
+img.small {
+    height: 4em;
     padding: 0em .5em;
 }
-a{
+a {
     color: #2A2ABE;
 }
-table{
+table {
     margin: auto auto;
-    border-radius: .5em;;
+    border-radius: .5em;
 }
-#creators, #art, #tools{
-    background-color:#A8A8A8;
+#creators, #art, #tools {
+    background-color: #A8A8A8;
 }
-#holder tr td{
+#holder tr td {
     vertical-align: top;
 }
-td, th{
-
+td, th {
     margin: auto .5em;
 }
-#goal{
+#goal {
     /*text-align: left;*/
     width: 800px;
     margin: auto auto;
@@ -42,12 +41,12 @@ td, th{
     margin-top: 0em;
     margin-bottom: 1em;
 }
-#game{
+#game {
     width: 800px;
     height: 450px;
     margin: auto auto;
     padding: 0 0;
 }
-p{
+p {
     color: #3F3F3F;
 }
